# scriptvania

./: Cargo.toml  flake.nix  planning.md
src/: main.rs  rendering.rs  scheduler.rs  scripting.rs  spatial.rs
