[package]
name = "scriptvania"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
mlua = { version = "0.10.1", features = ["async", "luau-jit", "macros", "send"] }
rhai = { version = "1.20.0", features = ["metadata", "serde", "sync"] }
rune = { version = "0.13.4", features = ["std", "tokio"] }
rune-modules = "0.13.4"
serde = "1.0.215"
tokio = { version = "1.41.1", features = ["full"] }
