[package]
name = "scriptvania"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy-tokio-tasks = "0.14.0"
rune = { version = "0.13.4", features = ["std", "tokio"] }
rune-modules = { version = "0.13.4", features = ["time"] }
serde = "1.0.215"
tokio = { version = "1.41.1", features = ["full"] }
